--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
+		"@chakra-ui/icons": "^2.2.4",
 		"@chakra-ui/react": "^3.5.1",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@million/lint": "^1.0.14",
-		"framer-motion": "^12.0.5",
+		"framer-motion": "^12.0.6",
 		"million": "^3.1.11",
 		"next-themes": "^0.4.4",
 		"react": "^18.3.1",
@@ -32,6 +33,7 @@
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
+		"gh-pages": "^6.3.0",
 		"globals": "^15.14.0",
 		"vite": "^6.0.5"
 	}
